--- a/index.css
+++ b/index.css
@@ -1,26 +1,260 @@
+/* #container{
+    margin: 0% 1% 0% 5%;
+    width: 100%;
+} */
+/* body{
+    box-sizing: border-box;
+} */
+hr{
+    margin: 5% 0% 5% 0%;
+}
+#heading{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+#threeCards{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    gap:2%;
+}
+#threeCards>div>img{
+    width: 100%;
+}
+#threeCards>div>h2{
+    text-decoration: underline;
+}
+#downloadApp{
+    display: flex;
+    gap:2%;
+}
+#downloadApp>div>img{
+    width:100%;
+}
+.blackBT{
+    color:white;
+    background-color: black;
+    padding: 3%;
+    font-weight: bolder;
+    cursor: pointer;
+    border: none;
+    border-radius: 30px;
+}
+#impInfo{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+}
+#impInfo>div>img{
+    width:100%;
+}
 #topCards{
-                    margin: 0% 1% 0% 5%;
-                }
-                body{
-                    box-sizing: border-box;
-                }
-               
-                #topCards{
-                    display: grid;
-                    grid-template-columns: repeat(2,1fr);
-                    gap: 3%;
-                    height: auto;
-                }
-                #topCards>div>img{
-                   width:100%;
-                   height:100%;
-                }
-                #topCards>div:nth-child(2){
-                    display: grid;
-                    grid-template-columns: repeat(2,1fr);
-                    gap:3%;
-                }
-                #topCards>div>div>img{
-                    width: 100%;
-                }
-                
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    gap: 3%;
+    height: auto;
+}
+#topCards>div>img{
+   width:100%;
+   height:100%;
+}
+#topCards>div:nth-child(2){
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    gap:3%;
+}
+#topCards>div>div>img{
+    width: 100%;
+}
+#offerCard{
+    display: flex;
+    background-color: lightgrey;
+}
+#offerCard>div:nth-child(2){
+    margin-right: 5%;
+}
+#offerCard>div>img{
+    width:95%;
+}
+#festCard{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    gap: 2%;
+    cursor: pointer;
+}
+#festCard>div>img{
+width: 100%;
+}
+#returnP{
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    justify-content: space-around;
+    text-align: center;
+    gap: 0.1%;
+    padding: 4%;
+}
+#returnP>div{
+    background-color: #F5F5F5;
+}
+
+.carousel-inner {
+    padding: 1em;
+  }
+  .slcard {
+    margin: 0 0.5em;
+    box-shadow: 2px 6px 8px 0 rgba(22, 22, 26, 0.18);
+    border: none;
+  }
+  .carousel-control-prev,
+  .carousel-control-next {
+    background-color: #e1e1e1;
+    width: 6vh;
+    height: 6vh;
+    border-radius: 50%;
+    top: 50%;
+    transform: translateY(-50%);
+  }
+  
+  .carousel-item {
+      margin-right: 0;
+      flex: 0 0 25%;
+      display: block;
+    }
+    .carousel-inner {
+      display: flex;
+    }
+  
+  .slcard .img-wrapper {
+      max-width: 100%;
+      height: 18em;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+  }
+  .slcard img {
+      max-height: 100%;
+      width: 100%;
+  }
+  .slcard{
+    height: 500px;
+  
+  }
+  .card-title{
+   margin-left: 20px;
+  }
+  .card-text{
+    margin-left: 20px;
+  }
+  .buybut{
+    background-color: darkred;
+    color: white;
+    border-radius: 100px;
+    margin-left: 20px;
+    margin-top: 50px;
+    
+  }
+  .explore{
+display: flex;
+flex-direction: row;
+margin-left: 60px;
+
+  }
+  @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+  body{
+      line-height: 1.5;
+      font-family: 'Poppins', sans-serif;
+      display: flex;
+      flex-direction: column;
+  }
+  *{
+      margin:0;
+      padding:0;
+      box-sizing: border-box;
+  }
+  .container{
+      max-width: 1170px;
+      margin:auto;
+  }
+  .row{
+      display: flex;
+      flex-wrap: wrap;
+  }
+  ul{
+      list-style: none;
+  }
+  .footer{
+      background-color: #ffffff;
+      padding: 70px 0;
+  }
+  .footer-col{
+     width: 25%;
+     padding: 0 15px;
+  }
+  .footer-col h4{
+      font-size: 18px;
+      color: #0e0e0e;
+      text-transform: capitalize;
+      margin-bottom: 35px;
+      font-weight: 500;
+      position: relative;
+  }
+  .footer-col h4::before{
+      content: '';
+      position: absolute;
+      left:0;
+      bottom: -10px;
+      background-color: #e6dde0;
+      height: 2px;
+      box-sizing: border-box;
+      width: 50px;
+  }
+  .footer-col ul li:not(:last-child){
+      margin-bottom: 10px;
+  }
+  .footer-col ul li a{
+      font-size: 16px;
+      text-transform: capitalize;
+      color: #ffffff;
+      text-decoration: none;
+      font-weight: 300;
+      color: #bbbbbb;
+      display: block;
+      transition: all 0.3s ease;
+  }
+  .footer-col ul li a:hover{
+      color: #ffffff;
+      padding-left: 8px;
+  }
+  .footer-col .social-links a{
+      display: inline-block;
+      height: 40px;
+      width: 40px;
+      background-color: white;
+      margin:0 10px 10px 0;
+      text-align: center;
+      line-height: 40px;
+      border-radius: 50%;
+      color: #ffffff;
+      transition: all 0.5s ease;
+  }
+  .footer-col .social-links a:hover{
+      color: #0d0d0d;
+      background-color: #ffffff;
+  }
+  
+  /*responsive*/
+  @media(max-width: 767px){
+    .footer-col{
+      width: 50%;
+      margin-bottom: 30px;
+  }
+  }
+  @media(max-width: 574px){
+    .footer-col{
+      width: 100%;
+  }
+  }
+  
+  
+  
+  
+  
